# nuSpaceSim

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  combineallroot.py  combineroot.py  jfk_result_summary.py  nss_to_conex_mc.root  pyproject.toml  requirements-dev.txt  sample_input_file.toml  sample_input_file.xml  sample_plot_config.ini  setup.cfg  setup.py  test.toml  test2.toml
.github/workflows/: conda-build-publish.yml  conda-build-test.yml  pre-commit.yml  publish-to-test-pypi.yml  pypi-build-test-publish.yml  pypi-build-test.yml
RenoNu2TauTables/: README.rtf
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/dev/: index.rst
docs/reference/: configuration.rst  index.rst  modules.rst  nuspacesim.core.rst  nuspacesim.data.RenoNu2TauTables.rst  nuspacesim.data.rst  nuspacesim.modules.eas_optical.rst  nuspacesim.modules.geometry.rst  nuspacesim.modules.rst  nuspacesim.rst  nuspacesim.utils.rst  nuspacesim.xml_config.rst
docs/tutorial/: command_line.rst  configuration.rst  index.rst  programming.rst  simulation.rst
nuSpaceSim/: __init__.py  atmospheric_properties.py  cli.py  constants.py  create_xml.py  detector_geometry.py  eas.py  main.py  params.py  radio.py  radio_antenna.py  region_geometry.py  sim_store.py  taus.py
nuSpaceSim/DataLibraries/PythiaDecayTables/: decay_codes.rtf  tau_100_PeV_07192021_machine.txt
nuSpaceSim/DataLibraries/PythiaDecayTables/HDF5_data/: new_tau_100_PeV.h5  tau_100_PeV.h5
nuSpaceSim/DataLibraries/RenoNu2TauTables/: nu2taudata.hdf5  read_reno_nu2tautables.py
nuSpaceSim/DataLibraries/RenoNu2TauTables/2019/: multi-efix.26  nu2taudata_NTS.hdf5
nuSpaceSim/DataLibraries/RenoNu2TauTables/2020/: README.rtf  nu2taudata.hdf5
nuSpaceSim/EAScherGen/: atmospheric_models.py  common_classes.py  conex.py  cphotang.py  eas.py
nuSpaceSim/EAScherGen/CompositeShowers/: composite_EAS.py  composite_eas.py  composite_macros.py
nuSpaceSim/EAScherGen/Conex/: conex_macros.py  conex_plotter.py
nuSpaceSim/EAScherGen/Pythia/: pythia_macros.py  pythia_plotter.py
nuSpaceSim/EAScherGen/TauDecays/: pythia_macros.py  pythia_plotter.py
nuSpaceSim/EAScherGen/src/: zsteps.cpp
nuSpaceSim/ionosphere/: ionospheric_dispersion.py
nuSpaceSim/ionosphere/.ipynb_checkpoints/: NuSpaceSim_Ionospheric_Dispersion-checkpoint.ipynb
nuSpaceSim/nsseas/: cphotang.py
nuSpaceSim/nssgeometry/: .gitignore
nuSpaceSim/nssgeometry/src/: nssgeometry.cpp
nuSpaceSim/nssgeometry/tests/: test_geom.py
nuSpaceSim/zhaires_nss/: wfm_processor.py
recipe/: meta.yaml
scratch/GHPP/: poemma360Diffuse.toml
scratch/GHPoemma/: input.toml
scratch/GH_fluctuated/: input.toml
scratch/GreisenPoemma/: TOML-escan-1PeVstart.sh
scratch/callOriginal/: spb2Diffuse.toml
scripts/: atmosphere_rho_curve_fit.py  cube_eas.py  eas_opt_atm_mdl.py  flatten_nupyprop_table.py  multi_result_summary.py  ode_test.py  ozone_model.py  profile_slant_depth.py  quad_eas_test.py  shower_age_root.py  slant_depth_model.py  subCphotAng.f  tau_lepton_efrac_plot2d.py  tau_lepton_energy_cdf_plot.py  tau_lepton_energy_cdf_plot2d.py  tau_lepton_energy_cdf_plot2d_artist.py  tau_pexit.py  us_std_atm_rho.py
src/nuspacesim/: __init__.py  __main__.py  _version.py  auger_atm_spline.pkl  augermc.py  augermc_newcoords_tests.py  augermc_old.py  augermc_regularEarth.py  chasm_geom.py  chasm_run.py  chasm_to_offline_original.py  compute.py  compute_withZ.py  conex_out.py  conex_out_GH4.py  conex_out_full.py  conex_out_old.py  conex_out_withZprofile.py  config.py  constants.py  full_root_out.py  results_table.py  simulate.py  state.py  storage.py  taus.py  testrcut.py  too.py
src/nuspacesim/DataLibraries/RenoNu2TauTables/: read_reno_nu2tautables.py
src/nuspacesim/EAScherGen/: __init__.py  atmospheric_models.py  cphotang.py  eas.py
src/nuspacesim/apps/: __init__.py  cli.py  cli_misc.py  create_config.py  run.py  show_plot.py  utils.py
src/nuspacesim/apps/commands/: create_config.py  run.py  show_plot.py
src/nuspacesim/configuration/: __init__.py  config_xml_schema.py  params.py  parse_config.py
src/nuspacesim/core/: __init__.py  config.py  constants.py  simulate.py  storage.py
src/nuspacesim/data/: __init__.py  compare_nupyprop_tables.py  concatenate_nupyprop_tables.py  invert_nu2tau_cdfs.py  make_nu2tau.py  nu2tau.py
src/nuspacesim/data/RenoNu2TauTables/: multi-efix-v5-sm35-5r-2020.26  nu2tau_cdf.fits  nu2tau_cdf.hdf5  nu2tau_pexit.fits  nu2tau_pexit.hdf5  read_reno_nu2tautables.py  reno_nu2tau_pexit.hdf5
src/nuspacesim/data/cloud_maps/: nss_map_CloudTopPressure_01.v0.fits  nss_map_CloudTopPressure_02.v0.fits  nss_map_CloudTopPressure_03.v0.fits  nss_map_CloudTopPressure_04.v0.fits  nss_map_CloudTopPressure_05.v0.fits  nss_map_CloudTopPressure_06.v0.fits  nss_map_CloudTopPressure_07.v0.fits  nss_map_CloudTopPressure_08.v0.fits  nss_map_CloudTopPressure_09.v0.fits  nss_map_CloudTopPressure_10.v0.fits  nss_map_CloudTopPressure_11.v0.fits  nss_map_CloudTopPressure_12.v0.fits
src/nuspacesim/data/conex_gh_params/: gh_00_km.h5  (+4 more)
src/nuspacesim/modules/: __init__.py  taus.py
src/nuspacesim/nssgeometry/: README.md  __init__.py  region_geometry.py
src/nuspacesim/simulation/: __init__.py  taus.py
src/nuspacesim/simulation/geometry/: CMakeLists.txt  __init__.py  local_plots.py  region_geometry.py  rg.py  too.py
src/nuspacesim/types/: cloud_types.py
src/nuspacesim/utils/: __init__.py  cdf.py  dashboard_plot.py  decorators.py  grid.py  grid_IO.py  interp.py  misc.py  ode.py  plot_function_registry.py  plot_wrapper.py  plots.py
src/nuspacesim/xml/: parse_config.py
src/nuspacesim/xml_config/: __init__.py  config_xml_schema.py  parse_config.py
test/: test_geom.py  test_interpolate.py
test/core/: test_config.py  test_constants.py
test/simulation/atmosphere/: test_pressure.py
test/simulation/eas_optical/: cphot_ang.py
test/simulation/geometry/: _t_region_geometry.py  cpp_region_geometry.py  test_rg.py  test_too.py  test_too_region_geom.py
test/utils/: test_cdf.py  test_decorators.py  test_grid.py  test_interp.py
(+292 files in other folders)
