[build-system]
requires = ["setuptools>=46",
            "setuptools_scm[toml]>=3.4",
            "wheel",
            "pybind11>=2.8",
            "numpy>1.17",
           ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = 'src/nuspacesim/_version.py'
version_scheme = 'post-release'
local_scheme = 'no-local-version'
parentdir_prefix_version = 'nuspacesim-'

[tool.cibuildwheel]
build = "cp3{8,9,10,11}-*"
test-requires = "pytest"
test-command = "pytest {project}/test"
test-skip = "*-*linux_{aarch64,ppc64le,s390x}"
test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.black]
line-length = 88
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | _version.py
  )/
)
'''

[tool.autopep8]
max_line_length = 88
ignore = "E501,W6"  # or ["E501", "W6"]

[tool.isort]
profile = "black"
