[metadata]
name = nuspacesim
author = Alex Reustle
author_email = alexander.reustle@nasa.gov
description = A Simulator for Space-based Neutrino Detections
keywords =
  NASA
  neutrinos
  Simulation
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
ext_package = nuspacesim
packages = find:
package_dir =
    = src
include_package_data=True
install_requires =
  astropy >= 4.3
  click
  dask
  dask[distributed]
  h5py
  lxml
  matplotlib
  numpy >= 1.20
  quadpy
  rich
  scipy
  # version specific backport includes
  cached_property;python_version<"3.8"
  importlib_metadata;python_version<"3.8"
  importlib_resources;python_version<"3.9"

[options.packages.find]
where = src

[options.package_data]
nuspacesim.data.RenoNu2TauTables = nu2taudata.hdf5
nuspacesim.data.nupyprop_tables =
  nu2tau_cdf.hdf5
  nu2tau_pexit.hdf5
nuspacesim.data.radio_params =
  ionosphere_params.hdf5
  waveform_params.hdf5

[options.entry_points]
console_scripts =
  nuspacesim = nuspacesim.apps.cli:cli

[bdist_wheel]
universal = 0

[tox:tox]
envlist =
  py{37,38,39}
  docs
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}

[testenv:docs]
description = invoke sphinx-build to build HTML docs
basepython = python3.9
deps =
  sphinx
  sphinx-panels
  sphinx-rtd-theme
commands = python -m sphinx -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
