[metadata]
name = nuspacesim
description = A Simulator for Space-based Neutrino Detections
long_description = file: README.md
long_description_content_type = text/markdown
author = Alex Reustle
author_email = alexander.reustle@nasa.gov
license = BSD-3-Clause-Clear
license_files = LICENSE.txt
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    NASA
    neutrinos
    Simulation

[options]
packages = find:
install_requires =
    astropy>=4.3
    click>=8.0.3
    cubepy
    dask
    dask[distributed]
    h5py
    lxml
    matplotlib
    numpy>=1.21
    rich
    scipy
    cached-property;python_version<"3.8"
    configparser;python_version<"3.8"
    importlib-metadata;python_version<"3.8"
    importlib-resources;python_version<"3.9"
python_requires = >=3.8
ext_package = nuspacesim
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nuspacesim = nuspacesim.apps.cli:cli

[options.package_data]
nuspacesim.data.nuleptonsim_tables =
    nu2tau_cdf.0.h5
    nu2tau_pexit.0.h5
nuspacesim.data.nupyprop_tables =
    nu2tau_cdf.0.h5
    nu2tau_cdf.1.h5
    nu2tau_cdf.2.h5
    nu2tau_cdf.3.h5
    nu2tau_pexit.0.h5
    nu2tau_pexit.1.h5
    nu2tau_pexit.2.h5
    nu2tau_pexit.3.h5
nuspacesim.data.radio_params =
    ionosphere_params.hdf5
    waveform_params.hdf5

[bdist_wheel]
universal = 0

[tox:tox]
envlist =
    py{38,39,310,311}
    docs
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}

[testenv:docs]
description = invoke sphinx-build to build HTML docs
basepython = python3.10
deps =
    sphinx
    sphinx-panels
    sphinx-rtd-theme
    sphinx-click
commands = python -m sphinx -v -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
    python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
